--- a/src/app/pop-up/notification-settlement/notification-settlement.component.html
+++ b/src/app/pop-up/notification-settlement/notification-settlement.component.html
@@ -229,6 +229,18 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>{{ "EVENTS.SERVICEORDER.CAUSESETTLEMENT" | translate }}</label>
+                                    <select formControlName="ccausafiniquito" class="form-control" [ngClass]="{ 'is-invalid' : submitted && popup_form.get('ccausafiniquito').errors }">
+                                        <option></option>
+                                        <option *ngFor="let causa of causaList" value="{{ causa.id }}">{{ causa.value }}</option>
+                                    </select>
+                                    <div *ngIf="submitted && popup_form.get('ccausafiniquito').errors"  class="invalid-feedback">
+                                        <div *ngIf="popup_form.get('ccausafiniquito').errors.required">{{ "EVENTS.SERVICEORDER.REQUIREDDOCUMENTTYPE" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
 
                             <div style="width: 150px">
                                 <div class="form-group">
