--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -238,6 +238,110 @@
                     </section>
                   </div>
                 </div> -->
+                <div class="col-md-2 mb-4 pb-2">
+                  <div class="form-outline">                        
+                    <label class="form-label" for="form3Examplev4">Cobertura</label>
+                    <select formControlName="xcobertura" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xcobertura').errors } ">
+                      <option value="RCV">RCV</option>
+                      <option value="AMPLIA">AMPLIA</option>
+                      <option value="PERDIDA TOTAL">PERDIDA TOTAL</option>
+                    </select>                         
+                     <div *ngIf="submitted && search_form.get('xcobertura').errors"  class="invalid-feedback">
+                      <div *ngIf="search_form.get('xcobertura').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
+                  <div class="form-outline">
+                    <label class="form-label" for="form3Examplev5">Suma asegurada de Casco</label>
+                    <input type="number" formControlName="msuma_aseg" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_aseg').errors }" />
+                    <div *ngIf="submitted && search_form.get('msuma_aseg').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('msuma_aseg').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 mb-4 pb-2">
+                  <div class="form-outline">
+                    <label class="form-label" for="form3Examplev4">Tarifa de casco</label>
+                    <input type="number" formControlName="mtarifa" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mtarifa').errors }" />
+                    <div *ngIf="submitted && search_form.get('mtarifa').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('mtarifa').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
+                  <div class="form-outline">
+                    <label class="form-label" for="form3Examplev5">Prima de casco bruta</label>
+                    <input type="number" formControlName="mprima_casco" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mprima_casco').errors }" />
+                    <div *ngIf="submitted && search_form.get('mprima_casco').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('mprima_casco').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 mb-4 pb-2">
+                  <div class="form-outline">
+                    <label class="form-label" for="form3Examplev4">Descuento</label>
+                    <input type="number" formControlName="pdescuento" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('pdescuento').errors }" />
+                    <div *ngIf="submitted && search_form.get('pdescuento').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('pdescuento').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 mb-4 pb-2">
+                  <div class="form-outline">
+                    <label class="form-label" for="form3Examplev4">Catastrofico</label>
+                    <input type="number" formControlName="mcatastrofico" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mcatastrofico').errors }" />
+                    <div *ngIf="submitted && search_form.get('mcatastrofico').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('mcatastrofico').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
+                  <div class="form-outline">
+                    <label class="form-label" for="form3Examplev5">Prima de blindaje</label>
+                    <input type="number" formControlName="mprima_blindaje" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mprima_blindaje').errors }" />
+                    <div *ngIf="submitted && search_form.get('mprima_blindaje').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('mprima_blindaje').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 mb-4 pb-2">
+                  <div class="form-outline">
+                    <label class="form-label" for="form3Examplev4">Suma asegurada de blindaje</label>
+                    <input type="number" formControlName="msuma_blindaje" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_blindaje').errors }" />
+                    <div *ngIf="submitted && search_form.get('msuma_blindaje').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('msuma_blindaje').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="button">
+                  <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="addAccessory()">Añadir accesorios</button>
+                </div>
+              </div> 
+            </div> 
+            <!-- Detalles del recibo -->
+            <div class="cards">
+              <div class="card-header company-card-header"><h5 class="card-title">Detalles del recibo</h5></div>
+              <div class="row" style="padding: 10px;">
+                <div class="col-md-4 mb-4 pb-2">
+                  <div class="form-outline">
+                    <label class="form-label">Frecuencia de pago</label>
+                    <select formControlName="cmetodologiapago" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmetodologiapago').errors } ">
+                      <option *ngFor="let metodologia of metodologiaList" value="{{ metodologia.id}}">{{ metodologia.value }}</option>
+                    </select>
+                    <div *ngIf="submitted && search_form.get('cmetodologiapago').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('cmetodologiapago').errors.required">Se requiere completar el campo</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- <div class="col-md-3 mb-4 pb-2">
+                  <div class="form-outline">
+                    <label class="form-label">Pago fraccionado</label>
+                    <section class="example-section" [formGroup]="search">
+                      <mat-checkbox formControlName="fraccionado">fraccionado</mat-checkbox>
+                    </section>
+                  </div>
+                </div> -->
                 <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
                   <div class="form-outline">
                     <label class="form-label" for="form3Examplev5">Fecha de emisión</label>
@@ -284,59 +388,19 @@
                   </div>
                 </div>
                 <div class="col-md-2 mb-4 pb-2">
-                  <div class="form-outline">                        
-                    <label class="form-label" for="form3Examplev4">Cobertura</label>
-                    <select formControlName="xcobertura" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xcobertura').errors } ">
-                      <option value="RCV">RCV</option>
-                      <option value="AMPLIA">AMPLIA</option>
-                      <option value="PERDIDA TOTAL">PERDIDA TOTAL</option>
-                    </select>                         
-                     <div *ngIf="submitted && search_form.get('xcobertura').errors"  class="invalid-feedback">
-                      <div *ngIf="search_form.get('xcobertura').errors.required">Se requiere completar el campo</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
                   <div class="form-outline">
-                    <label class="form-label" for="form3Examplev5">Suma asegurada</label>
-                    <input type="number" formControlName="msuma_aseg" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_aseg').errors }" />
-                    <div *ngIf="submitted && search_form.get('msuma_aseg').errors" class="invalid-feedback">
-                      <div *ngIf="search_form.get('msuma_aseg').errors.required">Se requiere completar el campo</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-2 mb-4 pb-2">
-                  <div class="form-outline">
-                    <label class="form-label" for="form3Examplev4">Tarifa</label>
-                    <input type="number" formControlName="mtarifa" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mtarifa').errors }" />
-                    <div *ngIf="submitted && search_form.get('mtarifa').errors" class="invalid-feedback">
-                      <div *ngIf="search_form.get('mtarifa').errors.required">Se requiere completar el campo</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
-                  <div class="form-outline">
-                    <label class="form-label" for="form3Examplev5">Prima de casco</label>
-                    <input type="number" formControlName="mprima_casco" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mprima_casco').errors }" />
-                    <div *ngIf="submitted && search_form.get('mprima_casco').errors" class="invalid-feedback">
-                      <div *ngIf="search_form.get('mprima_casco').errors.required">Se requiere completar el campo</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-2 mb-4 pb-2">
-                  <div class="form-outline">
-                    <label class="form-label" for="form3Examplev4">Catastrofico</label>
-                    <input type="number" formControlName="mcatastrofico" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('mcatastrofico').errors }" />
-                    <div *ngIf="submitted && search_form.get('mcatastrofico').errors" class="invalid-feedback">
-                      <div *ngIf="search_form.get('mcatastrofico').errors.required">Se requiere completar el campo</div>
+                    <label class="form-label" for="form3Examplev4">Monto Total</label>
+                    <input type="number" formControlName="msuma_blindaje" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('msuma_blindaje').errors }" />
+                    <div *ngIf="submitted && search_form.get('msuma_blindaje').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('msuma_blindaje').errors.required">Se requiere completar el campo</div>
                     </div>
                   </div>
                 </div>
                 <div class="button">
-                  <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Subscribir </button>
+                  <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Subscribir</button>
                 </div>
               </div> 
-            </div> 
+            </div>
           </div>
         </form>
       </div>
@@ -344,7 +408,7 @@
   </div>
 </section>
 
-<!-- <footer>    
+ <footer>    
   <div class="container">       
     <div class="row">
       <div class="col-sm-4">
@@ -401,4 +465,4 @@
       </div>
     </div>
   </div>
-</footer> -->
+</footer>
