--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -162,23 +162,31 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 pb-2">
-                    <div class="form-outline">
-                      <label class="form-label" for="form3Examplev5">Tipo de vehículo</label>
-                      <select formControlName="xtipo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtipo').errors }">
-                        <option *ngFor="let tipo of tipoList" value="{{ tipo.value }}">{{ tipo.value }}</option>
-                      </select>
-                      <div *ngIf="submitted && search_form.get('xtipo').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('xtipo').errors.required">Se requiere completar el campo</div>
+                  <div class="col-md-2 mb-4 pb-2">
+                    <div class="form-outline">                        
+                      <label class="form-label" for="form3Examplev4">Cobertura</label>
+                      <select formControlName="xcobertura" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xcobertura').errors } ">
+                        <option value="RCV">RCV</option>
+                        <option value="AMPLIA">AMPLIA</option>
+                        <option value="PERDIDA TOTAL">PERDIDA TOTAL</option>
+                      </select>                         
+                       <div *ngIf="submitted && search_form.get('xcobertura').errors"  class="invalid-feedback">
+                        <div *ngIf="search_form.get('xcobertura').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-3 mb-4 pb-2">
                     <div class="form-outline">
-                      <label class="form-label">Tipo de uso</label>
-                      <select formControlName="xuso" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xuso').errors } ">
-                        <option *ngFor="let uso of usoList" value="{{ uso.value}}">{{ uso.value }}</option>
+                      <label class="form-label" for="form3Examplev5">Tipo de vehículo</label>
+                      <select formControlName="xtipo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtipo').errors }">
+                        <option value="Rustico">Particular</option>
+                        <option value="Rustico">Rustico</option>
+                        <option value="Rustico">Pick-UP</option>
+                        <option value="Rustico">Carga</option>
                       </select>
+                      <div *ngIf="submitted && search_form.get('xtipo').errors" class="invalid-feedback">
+                        <div *ngIf="search_form.get('xtipo').errors.required">Se requiere completar el campo</div>
+                      </div>
                     </div>
                   </div>
                   <div class="col-md-4 mb-4 pb-2">
@@ -190,6 +198,8 @@
                       </div>
                     </div>
                   </div>
+                  <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" >Calcular Tarifa</button>
+
                 </div>
               </div>
             </div>
@@ -208,17 +218,6 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 mb-4 pb-2">
-                  <div class="form-outline">
-                    <label class="form-label">Frecuencia de pago</label>
-                    <select formControlName="cmetodologiapago" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmetodologiapago').errors } ">
-                      <option *ngFor="let metodologia of metodologiaList" value="{{ metodologia.id}}">{{ metodologia.value }}</option>
-                    </select>
-                    <div *ngIf="submitted && search_form.get('cmetodologiapago').errors" class="invalid-feedback">
-                      <div *ngIf="search_form.get('cmetodologiapago').errors.required">Se requiere completar el campo</div>
-                    </div>
-                  </div>
-                </div>
                 <div class="col-md-4 mb-4 pb-2 mb-md-0 pb-md-0">
                   <div class="form-outline">
                     <label class="form-label" for="form3Examplev5">Corredor</label>
@@ -227,27 +226,6 @@
                     </select>
                     <div *ngIf="submitted && search_form.get('ccorredor').errors" class="invalid-feedback">
                       <div *ngIf="search_form.get('ccorredor').errors.required">Se requiere completar el campo</div>
-                    </div>
-                  </div>
-                </div>
-                <!-- <div class="col-md-3 mb-4 pb-2">
-                  <div class="form-outline">
-                    <label class="form-label">Pago fraccionado</label>
-                    <section class="example-section" [formGroup]="search">
-                      <mat-checkbox formControlName="fraccionado">fraccionado</mat-checkbox>
-                    </section>
-                  </div>
-                </div> -->
-                <div class="col-md-2 mb-4 pb-2">
-                  <div class="form-outline">                        
-                    <label class="form-label" for="form3Examplev4">Cobertura</label>
-                    <select formControlName="xcobertura" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xcobertura').errors } ">
-                      <option value="RCV">RCV</option>
-                      <option value="AMPLIA">AMPLIA</option>
-                      <option value="PERDIDA TOTAL">PERDIDA TOTAL</option>
-                    </select>                         
-                     <div *ngIf="submitted && search_form.get('xcobertura').errors"  class="invalid-feedback">
-                      <div *ngIf="search_form.get('xcobertura').errors.required">Se requiere completar el campo</div>
                     </div>
                   </div>
                 </div>
@@ -334,14 +312,59 @@
                     </div>
                   </div>
                 </div>
-                <!-- <div class="col-md-3 mb-4 pb-2">
+                <div class="col-md mb-4 pb-2">
                   <div class="form-outline">
                     <label class="form-label">Pago fraccionado</label>
-                    <section class="example-section" [formGroup]="search">
+                    <section class="example-section">
                       <mat-checkbox formControlName="fraccionado">fraccionado</mat-checkbox>
                     </section>
                   </div>
-                </div> -->
+                </div>
+                <!-- <mat-card>
+                  <mat-card-content>
+                    <h2 class="example-h2">Checkbox configuration</h2>
+                
+                    <section class="example-section">
+                      <mat-checkbox class="example-margin" ngModel=" indeterminate">Checked</mat-checkbox>
+                      <mat-checkbox class="example-margin" ngModel="indeterminate">Indeterminate</mat-checkbox>
+                    </section>
+                
+                    <section class="example-section">
+                      <label class="example-margin">Align:</label>
+                      <mat-radio-group ngModel="labelPosition">
+                        <mat-radio-button class="example-margin" value="after">After</mat-radio-button>
+                        <mat-radio-button class="example-margin" value="before">Before</mat-radio-button>
+                      </mat-radio-group>
+                    </section>
+                
+                    <section class="example-section">
+                      <mat-checkbox class="example-margin" ngModel="disabled">Disabled</mat-checkbox>
+                    </section>
+                  </mat-card-content>
+                </mat-card>
+                
+                <mat-card class="result">
+                  <mat-card-content>
+                    <h2 class="example-h2">Result</h2>
+                
+                    <section class="example-section">
+                      <mat-checkbox
+                          class="example-margin"
+                          ngModel="checked"
+                          [(indeterminate)]="indeterminate"
+                          [labelPosition]="labelPosition"
+                          [disabled]="disabled">
+                        I'm a checkbox
+                      </mat-checkbox>
+                    </section>
+                  </mat-card-content>
+                </mat-card> -->
+                <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
+                  <div class="form-outline">
+                    <label class="form-label" for="form3Examplev5">Número de cuotas</label>
+                    <input type="number" formControlName="femision" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('femision').errors }" />
+                  </div>
+                </div>
                 <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
                   <div class="form-outline">
                     <label class="form-label" for="form3Examplev5">Fecha de emisión</label>
