[fix]: Adding Sortable Option in Parent Policy Broker

--- a/src/app/subscription/parent-policy/parent-policy-index/parent-policy-index.component.html
+++ b/src/app/subscription/parent-policy/parent-policy-index/parent-policy-index.component.html
@@ -60,7 +60,7 @@
                             <ag-grid-column headerName="Código" field="ccarga" [width]="122" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="N° de Póliza" field="xpoliza" [width]="160" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Descripción" field="xdescripcion" [width]="300" [sortable]="true" [resizable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Corredor" field="xcorredor" [width]="300" [sortable]="false" [resizable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Corredor" field="xcorredor" [width]="300" [sortable]="true" [resizable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Fecha de Creación" field="fcreacion" [width]="172" [sortable]="true" [resizable]="true"></ag-grid-column>
                         </ag-grid-angular>
                     </div>
