--- a/src/app/providers/provider/provider-detail/provider-detail.component.html
+++ b/src/app/providers/provider/provider-detail/provider-detail.component.html
@@ -41,7 +41,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-4">
+                            <!-- <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "PROVIDERS.PROVIDERS.BUSINESSNAME" | translate }}</label>
                                     <input type="text" formControlName="xrazonsocial" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xrazonsocial').errors }">
@@ -61,7 +61,7 @@
                                         <div *ngIf="detail_form.get('ctipodocidentidad').errors.required">{{ "PROVIDERS.PROVIDERS.REQUIREDDOCUMENTTYPE" | translate }}</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "PROVIDERS.PROVIDERS.IDENTIFICATIONDOCUMENT" | translate }}</label>
@@ -89,7 +89,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-4">
+                            <!-- <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "PROVIDERS.PROVIDERS.FAX" | translate }}</label>
                                     <input type="text" formControlName="xfax" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xfax').errors }">
@@ -104,7 +104,7 @@
                                     <div *ngIf="submitted && detail_form.get('xpaginaweb').errors"  class="invalid-feedback">
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "PROVIDERS.PROVIDERS.RETENTIONPERCENTAGE" | translate }}</label>
@@ -164,7 +164,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-4">
+                            <!-- <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "PROVIDERS.PROVIDERS.MAILADDRESS" | translate }}</label>
                                     <textarea type="text" formControlName="xdireccioncorreo" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xdireccioncorreo').errors }" cols="30" rows="2"></textarea>
@@ -172,7 +172,7 @@
                                         <div *ngIf="detail_form.get('xdireccioncorreo').errors.required">{{ "PROVIDERS.PROVIDERS.REQUIREDMAILADDRESS" | translate }}</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "PROVIDERS.PROVIDERS.OBSERVATION" | translate }}</label>
@@ -235,7 +235,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header company-card-header">
@@ -290,7 +290,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="row mt-5">
         <div class="col-sm-12">
             <div class="card">
@@ -318,7 +318,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5 mb-5">
+    <!-- <div class="row mt-5 mb-5">
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header company-card-header">
@@ -346,8 +346,8 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    </div>-->
+</div> 
 
 
 <footer>    
