--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -198,7 +198,7 @@
                       </div>
                     </div>
                   </div>
-                  <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" >Calcular Tarifa</button>
+                 <div class="buton"><button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="generateTarifa()">Calcular Tarifa</button></div>
 
                 </div>
               </div>
